[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/sprites720p.png" type="Texture" id=1]
[ext_resource path="res://addons/angelica/Joystick/JoystickR.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/Player/Gun.gd" type="Script" id=3]
[ext_resource path="res://sprites/sprites16x45.png" type="Texture" id=4]
[ext_resource path="res://addons/angelica/Joystick/DiControlR.gd" type="Script" id=5]
[ext_resource path="res://addons/angelica/Themes/Cursor.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 40.7922

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.701961, 0, 0, 0.258824 )
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 864, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 800, 832, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 624, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 5 ), SubResource( 7 ) ],
"loop": false,
"name": "tiro",
"speed": 5.0
} ]

[node name="RightControl" type="Node2D"]
process_priority = 1
position = Vector2( 120, 420 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Joystick" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Cursor" parent="Joystick" instance=ExtResource( 6 )]
visible = true
script = null

[node name="Area2D2" type="Area2D" parent="Joystick"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Joystick/Area2D2"]
shape = SubResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Joystick"]
modulate = Color( 1, 1, 1, 0.0117647 )
margin_left = -59.0
margin_top = -61.0
margin_right = 59.0
margin_bottom = 61.0
text = " "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="Panel" parent="Joystick"]
visible = false
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = 60.0
theme = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -88.0
margin_right = 20.0
margin_bottom = -74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun" type="Node2D" parent="."]
position = Vector2( 0, -7.545 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Gun"]
position = Vector2( 13.7402, 2.56968 )
frames = SubResource( 8 )

[node name="Position2D" type="Position2D" parent="Gun"]
position = Vector2( 41.5875, 3.43875 )
scale = Vector2( 0.5, 4 )

[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Joystick/Area2D2" to="Joystick" method="_on_Area2D2_input_event"]
[connection signal="gui_input" from="Joystick/RichTextLabel" to="Joystick" method="_on_RichTextLabel_gui_input"]
[connection signal="gui_input" from="Joystick/TouchScreenButton" to="Joystick" method="_on_TouchScreenButton_gui_input"]
